# vecstore

./: .gitignore  CHANGELOG.md  CLAUDE_FIXES.md  Cargo.toml  DEPLOYMENT.md  DEVELOPER_GUIDE.md  Dockerfile  PACKAGING.md  PHASE1_PLAN.md  PUBLISHING.md  QUICKSTART.md  README.md  RELEASE-v1.0.0.md  ROADMAP.md  V1.0.0-COMPLETE.md  build.rs  pyproject.toml
.github/: AUTOMATION_SETUP.md
.github/workflows/: README.md  build-binaries.yml  ci.yml  docker-publish.yml  npm-publish.yml  package-updates.yml  python-publish.yml  release.yml  submit-to-package-managers.yml
Formula/: README.md  vecstore.rb
archive/: README.md
archive/history/: AUDIT-EXECUTIVE-SUMMARY.md  BENCHMARKS.md  CANDLE-IMPLEMENTATION-NOTES.md  CHANGELOG-new-features.md  COMPETITIVE-ANALYSIS.md  COMPETITIVE-PINECONE-DEEP-DIVE.md  COMPETITIVE-QDRANT-DEEP-DIVE.md  COMPETITIVE-WEAVIATE-DEEP-DIVE.md  COMPLETE-RAG-STACK.md  COMPLETE-ROADMAP-V4.md  COMPLETION-VERIFICATION.md  DEEP-AUDIT-FINDINGS.md  DOCS-QUICK-REFERENCE.md  DOCUMENTATION-REORGANIZATION-PLAN.md  DOCUMENTATION-SUMMARY.md  FEATURES.md  FINAL-SESSION-SUMMARY.md  FINAL-SUMMARY.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  NAMESPACES.md  OPENAI-EMBEDDINGS.md  PERFECT-SCORE-SUMMARY.md  PHASE-2-PROGRESS.md  PHASE-3-COMPLETE.md  PHASE-5-COMPLETE.md  PHASE-6-COMPLETE.md  PHASE-7-COMPLETE.md  PHASE-9-COMPLETE.md  PHASE1-COMPLETE-FINAL-SUMMARY.md  PHASE1-DAY1-3-COMPLETE.md  PHASE1-DAY4-6-PROGRESS.md  PHASE1-DAY7-8-COMPLETE.md  PHASE1-DAY9-10-COMPLETE.md  PHASE1-DAYS1-8-EXECUTIVE-SUMMARY.md  PHASES-10-12-COMPLETE.md  PHASES-10-13-PLAN.md  PHASES-3-4-COMPLETE.md  PHASES-7-8-COMPLETE.md  POST-1.0-ROADMAP.md  (+41 more)
aur/: PKGBUILD  README.md
chocolatey/: README.md  vecstore.nuspec
conda/: README.md  meta.yaml
docs/: ACHIEVEMENTS.md  ARCHITECTURE.md  COMPETITIVE-ANALYSIS.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  FEATURES.md  MIGRATION_GUIDE.md  PUBLISHING-GUIDE.md  README.md  ROADMAP.md  STATUS.md  WASM-PERFORMANCE.md  WASM.md
examples/: 02_pdf_rag.rs  03_web_scraping_rag.rs  04_code_search.rs  09_evaluation_demo.rs  10_production_rag.rs  advanced_rag_demo.rs  collection_demo.rs  embedding_integration_demo.rs  metadata_indexing_demo.rs  production_ready_system.rs  realtime_indexing.rs  sparse_vectors_demo.rs  streaming_demo.rs  text_chunking_demo.rs
flatpak/: README.md  com.github.philipjohnbasile.vecstore.json
macports/: Portfile  README.md
nix/: README.md  default.nix
python/: README.md
python/examples/: fastapi_app.py
python/vecstore/: __init__.py
scoop/: README.md  vecstore.json
scripts/: submit-packages.sh
snap/: README.md  snapcraft.yaml
src/: compression.rs  embeddings.rs  gpu.rs  ivf_pq.rs  lib.rs  simd.rs  splade.rs
src/cli/: commands.rs  mod.rs
src/distributed/: mod.rs
src/reranking/: cross_encoder.rs
src/server/: http.rs  types.rs
src/store/: disk_hnsw.rs  hnsw_backend.rs  hnsw_backend_new.rs  hybrid.rs  mod.rs  wasm_backend.rs
vecstore-eval/: Cargo.toml
vecstore-eval/examples/: evaluate_rag.rs
vecstore-eval/src/: evaluator.rs  lib.rs  metrics.rs  types.rs
vecstore-loaders/: Cargo.toml
vecstore-loaders/src/: code.rs  csv_loader.rs  docx_loader.rs  epub_loader.rs  error.rs  extended_loaders.rs  json_loader.rs  lib.rs  markdown.rs  pdf.rs  pptx_loader.rs  text.rs  web.rs
winget/: README.md
winget/manifests/p/PhilipJohnBasile/vecstore/0.0.1/: PhilipJohnBasile.vecstore.installer.yaml  PhilipJohnBasile.vecstore.locale.en-US.yaml  PhilipJohnBasile.vecstore.yaml
winget/manifests/p/PhilipJohnBasile/vecstore/1.0.0/: PhilipJohnBasile.vecstore.installer.yaml  PhilipJohnBasile.vecstore.locale.en-US.yaml  PhilipJohnBasile.vecstore.yaml
