[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vecstore-rs"
version = "0.0.1"
description = "Embeddable vector database with HNSW search and RAG-focused tooling"
readme = "python/README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "VecStore Contributors" }
]
keywords = ["vector-database", "embedding", "search", "rag", "hnsw", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/PhilipJohnBasile/vecstore"
Documentation = "https://docs.rs/vecstore"
Repository = "https://github.com/PhilipJohnBasile/vecstore"
Issues = "https://github.com/PhilipJohnBasile/vecstore/issues"
Changelog = "https://github.com/PhilipJohnBasile/vecstore/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "vecstore"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"
