[package]
name = "vecstore-eval"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "RAG evaluation toolkit for VecStore - measure retrieval quality, answer faithfulness, and correctness"
repository = "https://github.com/yourusername/vecstore"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# For embeddings in answer correctness metric
vecstore = { path = "..", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "sync", "macros"] }
approx = "0.5"
