[package]
name = "vecstore-loaders"
version = "0.1.0"
edition = "2021"
authors = ["VecStore Contributors"]
description = "Document loaders for VecStore - PDF, web, markdown, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/vecstore"
keywords = ["vector-database", "document-loader", "rag", "pdf", "markdown"]
categories = ["database", "text-processing"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional dependencies for different loaders
lopdf = { version = "0.32", optional = true }
pulldown-cmark = { version = "0.11", optional = true }
reqwest = { version = "0.12", optional = true, features = ["blocking"] }
scraper = { version = "0.19", optional = true }
csv = { version = "1.3", optional = true }
encoding_rs = { version = "0.8", optional = true }
tree-sitter = { version = "0.22", optional = true }
docx-rs = { version = "0.4", optional = true }
zip = { version = "2.0", optional = true }
quick-xml = { version = "0.36", optional = true }
epub = { version = "2.0", optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["text", "markdown", "json", "csv"]

# Individual loader features
text = ["encoding_rs"]
markdown = ["pulldown-cmark"]
pdf = ["lopdf"]
web = ["reqwest", "scraper"]
json = []
csv = ["dep:csv"]
code = ["tree-sitter"]
docx = ["docx-rs"]
pptx = ["zip", "quick-xml"]
epub = ["dep:epub"]

# Convenience features
all = ["text", "markdown", "pdf", "web", "json", "csv", "code", "docx", "pptx", "epub"]
